# book_ros2

br2_fsm_bumpgo_cpp/: CMakeLists.txt
br2_fsm_bumpgo_cpp/include/br2_fsm_bumpgo_cpp/: BumpGoNodeEx1.hpp  BumpGoNodeEx2CL.hpp  BumpGoNodeEx2OL.hpp
br2_fsm_bumpgo_cpp/launch/: bump_and_go_ex1.launch.py  bump_and_go_ex2_cl.launch.py  bump_and_go_ex2_ol.launch.py
br2_fsm_bumpgo_cpp/src/: bumpgo_main_ex1.cpp  bumpgo_main_ex2_cl.cpp  bumpgo_main_ex2_ol.cpp
br2_fsm_bumpgo_cpp/src/br2_fsm_bumpgo_cpp/: BumpGoNodeEx1.cpp  BumpGoNodeEx2CL.cpp  BumpGoNodeEx2OL.cpp
br2_tf2_detector/: CMakeLists.txt
br2_tf2_detector/include/br2_tf2_detector/: MovementMonitorNode.hpp  ObstacleDetectorImprovedNode.hpp  ObstacleMonitorNode.hpp
br2_tf2_detector/launch/: detector_improved_with_movement_monitor.launch.py
br2_tf2_detector/src/: detector_improved_with_movement_monitor_main.cpp
br2_tf2_detector/src/br2_tf2_detector/: MovementMonitorNode.cpp  ObstacleDetectorImprovedNode.cpp  ObstacleDetectorNode.cpp  ObstacleMonitorNode.cpp
br2_tracking/src/: object_tracker_main.cpp
br2_tracking/src/br2_tracking/: HeadController.cpp  ObjectDetector.cpp  PIDController.cpp
br2_vff_avoidance/include/br2_vff_avoidance/: AvoidanceNode.hpp
br2_vff_avoidance/src/br2_vff_avoidance/: AvoidanceNode.cpp
